--- a/index.html
+++ b/index.html
@@ -6,63 +6,104 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+  <title>landing page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  </style> -->
 </head>
 <body>
-  About
-  Services
-  Projects
-  Contact
+  <section id="hero">
+    <div class="hero container">
+      <h1>We are creatives</h1>
+    </div>
+  </section>
 
-  We are creatives
+  <section id="content">
+    <div class="content1 container">
+      <h1>Transform your brand</h1>
+      <p>We are a full-service creative agency specializing in helping brands grow fast. 
+        Engage your clients through compelling visuals that do most of the marketing for you.</p>
+      <a href="#">Learn more</a>
+    </div>
+    <div class="content2 container"></div>
+    <div class="content3 container"></div>
+    <div class="content4 container">
+      <h1>  Stand out to the right audience</h1>
+      <p>  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+      <a href="#">Learn more</a>
+    </div>
+    <div class="content5 container">
+      <h1>Graphic design</h1>
+      <p>  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+      <a href="#">Learn more</a>
+    </div>
+    <div class="content6 container">
+      <h1>  Photography</h1>
+      <p>  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+      <a href="#">Learn more</a>
+    </div>
+  </section>
 
-  Transform your brand
+  <section id="client">
+    <h1>Client testimonials</h1>
+    <div class="client1 container">
+      <img src="images/image-emily.jpg" alt="">
+      <p>  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+      <h2>  Emily R.</h2>
+      <h3>Marketing Director</h3>
+    </div>
+    <div class="client2 container">
+      <img src="images/image-thomas.jpg" alt="">
+      <p>  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+      <h2>Thomas S.</h2>
+      <h3>Chief Operating Officer</h3>
+    </div>
+    <div class="client3 container">
+      <img src="images/image-jennie.jpg" alt="">
+      <p>  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+      <h2>Jennie F.</h2>
+      <h3>Business Owner</h3>
+    </div>
+  </section>
 
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
+  <section id="images">
+    <img src="images/desktop/image-gallery-milkbottles.jpg" alt="milkbottles">
+    <img src="images/desktop/image-gallery-orange.jpg" alt="orange">
+    <img src="images/desktop/image-gallery-cone.jpg" alt="icecream-cone">
+    <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="sugarcubes">
+  </section>
 
-  Learn more
+  <footer>
+    <div class="company container">
+      <h1>sunnyside</h1>
+    </div>
+    <div class="f_menu">
+      <p><a href="#">About</a></p>
+      <p><a href="#">Services</a></p>
+      <p><a href="#">Projects</a></p>
+    </div>
+    <div class="socials">
+      <img src="images/icon-facebook.svg" alt="facebook">
+      <img src="images/icon-instagram.svg" alt="instagram">
+      <img src="images/icon-twitter.svg" alt="twitter">
+      <img src="images/icon-pinterest.svg" alt="pinterest">
+    </div>
+    <div class="challenge container">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.</p>
+    </div>
+  </footer>
 
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <!-- <section id="menu">
+    <div class="menu container">
+     About
+     Services
+     Projects
+     Contact
+    </div>
+  </section> -->
 </body>
 </html>
