--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 
@@ -28,8 +28,12 @@
         Engage your clients through compelling visuals that do most of the marketing for you.</p>
       <a href="#">Learn more</a>
     </div>
-    <div class="content2 container"></div>
-    <div class="content3 container"></div>
+    <div class="content2 container">
+       <h1></h1>
+    </div>
+    <div class="content3 container">
+         <h1></h1>
+    </div>
     <div class="content4 container">
       <h1>  Stand out to the right audience</h1>
       <p>  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
