client testimonial section done

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
   </section>
 
   <section id="client">
-    <h1>Client testimonials</h1>
+    <div class="client">
+      <h1>Client testimonials</h1>
     <div class="client1 container">
       <img src="images/image-emily.jpg" alt="">
       <p>  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
@@ -75,6 +76,7 @@
       <p>  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
       <h2>Jennie F.</h2>
       <h3>Business Owner</h3>
+    </div>
     </div>
   </section>
 
